fix navbar drop down overlapping with content

--- a/react-ui/src/components/MenuBar.sass
+++ b/react-ui/src/components/MenuBar.sass
@@ -3,6 +3,7 @@ header
     top: 0
     display: flex
     flex-direction: column
+    z-index: 1
 
     #second-menu
         .navbar-brand
